--- a/docs/introduction.ipynb
+++ b/docs/introduction.ipynb
@@ -261,11 +261,11 @@
     "s_channel = Diagram(ax[0])\n",
     "# Vertices\n",
     "v_p1 = s_channel.vertex(xy=(0.1, 0.7), marker=\"\")\n",
-    "v_p2 = s_channel.vertex(v_p1.xy, dy=-0.6, marker=\"\")\n",
-    "v_p3 = s_channel.vertex(v_p1.xy, dx=0.8, marker=\"\")\n",
-    "v_p4 = s_channel.vertex(v_p3.xy, dy=-0.6, marker=\"\")\n",
-    "v1 = s_channel.vertex(v_p1.xy, dx=0.2, dy=-0.3, marker=\"\")\n",
-    "v2 = s_channel.vertex(v_p3.xy, dx=-0.2, dy=-0.3, marker=\"\")\n",
+    "v_p2 = s_channel.vertex(tuple(v_p1.xy), dy=-0.6, marker=\"\")\n",
+    "v_p3 = s_channel.vertex(tuple(v_p1.xy), dx=0.8, marker=\"\")\n",
+    "v_p4 = s_channel.vertex(tuple(v_p3.xy), dy=-0.6, marker=\"\")\n",
+    "v1 = s_channel.vertex(tuple(v_p1.xy), dx=0.2, dy=-0.3, marker=\"\")\n",
+    "v2 = s_channel.vertex(tuple(v_p3.xy), dx=-0.2, dy=-0.3, marker=\"\")\n",
     "# Lines\n",
     "p1 = s_channel.line(v_p1, v1, arrow=False)\n",
     "p2 = s_channel.line(v1, v_p2, arrow=False)\n",
@@ -284,11 +284,11 @@
     "t_channel = Diagram(ax[1])\n",
     "# Vertices\n",
     "v_p1 = t_channel.vertex(xy=(0.1, 0.7), marker=\"\")\n",
-    "v_p2 = t_channel.vertex(v_p1.xy, dy=-0.6, marker=\"\")\n",
-    "v_p3 = t_channel.vertex(v_p1.xy, dx=0.8, marker=\"\")\n",
-    "v_p4 = t_channel.vertex(v_p3.xy, dy=-0.6, marker=\"\")\n",
-    "v1 = t_channel.vertex(v_p1.xy, dx=0.4, dy=-0.15, marker=\"\")\n",
-    "v2 = t_channel.vertex(v_p2.xy, dx=0.4, dy=+0.15, marker=\"\")\n",
+    "v_p2 = t_channel.vertex(tuple(v_p1.xy), dy=-0.6, marker=\"\")\n",
+    "v_p3 = t_channel.vertex(tuple(v_p1.xy), dx=0.8, marker=\"\")\n",
+    "v_p4 = t_channel.vertex(tuple(v_p3.xy), dy=-0.6, marker=\"\")\n",
+    "v1 = t_channel.vertex(tuple(v_p1.xy), dx=0.4, dy=-0.15, marker=\"\")\n",
+    "v2 = t_channel.vertex(tuple(v_p2.xy), dx=0.4, dy=+0.15, marker=\"\")\n",
     "# Lines\n",
     "p1 = t_channel.line(v_p1, v1, arrow=False)\n",
     "p2 = t_channel.line(v1, v_p3, arrow=False)\n",
@@ -307,11 +307,11 @@
     "u_channel = Diagram(ax[2])\n",
     "# Vertices\n",
     "v_p1 = u_channel.vertex(xy=(0.1, 0.7), marker=\"\")\n",
-    "v_p2 = u_channel.vertex(v_p1.xy, dy=-0.6, marker=\"\")\n",
-    "v_p3 = u_channel.vertex(v_p1.xy, dx=0.8, marker=\"\")\n",
-    "v_p4 = u_channel.vertex(v_p3.xy, dy=-0.6, marker=\"\")\n",
-    "v1 = u_channel.vertex(v_p1.xy, dx=0.4, dy=-0.15, marker=\"\")\n",
-    "v2 = u_channel.vertex(v_p2.xy, dx=0.4, dy=+0.15, marker=\"\")\n",
+    "v_p2 = u_channel.vertex(tuple(v_p1.xy), dy=-0.6, marker=\"\")\n",
+    "v_p3 = u_channel.vertex(tuple(v_p1.xy), dx=0.8, marker=\"\")\n",
+    "v_p4 = u_channel.vertex(tuple(v_p3.xy), dy=-0.6, marker=\"\")\n",
+    "v1 = u_channel.vertex(tuple(v_p1.xy), dx=0.4, dy=-0.15, marker=\"\")\n",
+    "v2 = u_channel.vertex(tuple(v_p2.xy), dx=0.4, dy=+0.15, marker=\"\")\n",
     "# Lines\n",
     "p1 = u_channel.line(v_p1, v1, arrow=False)\n",
     "p2 = u_channel.line(v1, v_p4, arrow=False)\n",
@@ -337,6 +337,18 @@
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.18"
   }
  },
  "nbformat": 4,
