--- a/docs/introduction.ipynb
+++ b/docs/introduction.ipynb
@@ -121,7 +121,7 @@
    "source": [
     "<!-- In general one is interested in gaining knowledge about the interaction of particles. Therefore, particle reaction experiments are performed to validate theoretical models and extract physical quantities and  information (based on those models). To validate and extract information a comparison of the data from the experiment and the theoretical model is needed.\n",
     "\n",
-    "The probability amplitude {cite}`weinbergQuantumTheoryFields1995`, p.113 of an initial state $\\Psi_i$ going to a final state $\\Psi_f$ is:\n",
+    "The probability amplitude {cite}`Weinberg:1995mt`, p.113 of an initial state $\\Psi_i$ going to a final state $\\Psi_f$ is:\n",
     "\n",
     "$$\n",
     "S_{fi} = \\left< \\Psi_f \\middle| S \\middle| \\Psi_i \\right> = -2\\pi i \\delta^4(p_i - p_f)M_{fi}.\n",
@@ -133,7 +133,7 @@
     "\n",
     "1. Single particles in the initial state ($N_I=1$)\n",
     "\n",
-    "   This is a single particle decaying into the final state particles. Here the decay rate {cite}`weinbergQuantumTheoryFields1995`, p.136 is\n",
+    "   This is a single particle decaying into the final state particles. Here the decay rate {cite}`Weinberg:1995mt`, p.136 is\n",
     "\n",
     "   $$\n",
     "   d\\Gamma(i \\rightarrow f) = 2\\pi |M_{fi}|^2 \\delta^4(p_f - p_i) d\\Phi_f\n",
@@ -143,7 +143,7 @@
     "\n",
     "2. Two particles in the initial state ($N_I=2$)\n",
     "\n",
-    "   The cross section of a two particle scattering/production process {cite}`weinbergQuantumTheoryFields1995`, p.137 is\n",
+    "   The cross section of a two particle scattering/production process {cite}`Weinberg:1995mt`, p.137 is\n",
     "\n",
     "   $$\n",
     "   d\\sigma(i \\rightarrow f) = (2\\pi)^4 u*i^{-1} |M*{fi}|^2 \\delta^4(p_f - p_i) d\\Phi_f\n",
@@ -151,7 +151,7 @@
     "   \n",
     "   with $u_i^{-1}$ the relative velocity of the initial state particles.\n",
     "\n",
-    "Describing multi body problems (more than 2) is a difficult task, since the interaction of more than two particles is difficult to describe {cite}`weinbergQuantumTheoryFields1995`, ch.4.\n",
+    "Describing multi body problems (more than 2) is a difficult task, since the interaction of more than two particles is difficult to describe {cite}`Weinberg:1995mt`, ch.4.\n",
     "\n",
     "One can resort to a simplification to treat a many body interaction by successive two body interactions. For N body particle decays (N > 2) this is known as the isobar model. Here a particle into N final state particles is modelled by a sequence of two particle decays. This is also also a assumption of the helicity/canonical formalism. -->"
    ]
